<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/text_user_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:isScrollContainer="false"
            android:text="@string/text_user_name"
            android:textAlignment="textStart"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/input_user_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="24sp" />

        <TextView
            android:id="@+id/test_user_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/text_user_email"
            android:textAlignment="textStart"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/input_user_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_ok"
            android:textColorHighlight="#009688"
            android:textSize="24sp"
            style="@style/Widget.AppCompat.Button.Colored"/>

        <Button
            android:id="@+id/button_clean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_clean"
            android:textSize="24sp"
            style="@style/Widget.AppCompat.Button.Colored"/>

        <TextView
            android:id="@+id/success_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="@string/success_text"
            android:visibility="invisible" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>